syntax = "proto3";

package NAlice.NMemento;

option java_package = "ru.yandex.alice.memento.grpc";
option java_multiple_files = true;

import "alice/memento/proto/api.proto";
import "apphost/lib/proto_answers/tvm_user_ticket.proto";
import "apphost/proto/extensions/extensions.proto";

message TGetAllObjectsRequest {
    ru.yandex.alice.memento.proto.TReqGetAllObjects Request = 1 [(typing_apphost_type) = 'get_all_objects_request'];
    // optional
    NAppHostTvmUserTicket.TTvmUserTicket TvmUserTicket = 2 [(typing_apphost_type) = 'tvm_user_ticket'];
}

message TGetAllObjectsResponse {
    ru.yandex.alice.memento.proto.TRespGetAllObjects memento_user_objects = 1 [(typing_apphost_type) = 'memento_user_objects'];
}

message TUpdateObjectsRequest {
    ru.yandex.alice.memento.proto.TReqChangeUserObjects Request = 1 [(typing_apphost_type) = 'update_objects_request'];
    // optional
    NAppHostTvmUserTicket.TTvmUserTicket TvmUserTicket = 2 [(typing_apphost_type) = 'tvm_user_ticket'];
}

message TUpdateObjectsResponse {

}

message TClearAllDataRequest {
    ru.yandex.alice.memento.proto.TClearUserData request = 1 [(typing_apphost_type) = 'clear_all_data_request'];
    // optional
    NAppHostTvmUserTicket.TTvmUserTicket TvmUserTicket = 2 [(typing_apphost_type) = 'tvm_user_ticket'];
}

message TClearAllDataResponse {

}

service MementoGrpcService {
    rpc GetAllObjects(TGetAllObjectsRequest) returns (TGetAllObjectsResponse) {
        option (path) = '/get_all_objects';
    }
    rpc UpdateObjects(TUpdateObjectsRequest) returns (TUpdateObjectsResponse) {
        option (path) = '/update_objects';
    }
    rpc ClearAllData(TClearAllDataRequest) returns (TClearAllDataResponse) {
        option (path) = '/clear_all_data';
    }
}
